force-app/main/default/objects/Assesment__c.object
<CustomObject>
    <fields>
        <fullName>Order_Text__c</fullName>
        <formula>TEXT(YEAR(Assessment_Folder__r.Assessment_Date__c))&amp; 

CASE(Assessment_Folder__r.Term_Copy__c,&quot;Term 1&quot;,&quot;3&quot;,&quot;Term 3&quot;,&quot;2&quot;,&quot;1&quot;)&amp; 

IF(Assessment_Folder__r.Mid_Term_Report__c =&quot;YES&quot;,&quot;0&quot;,&quot;1&quot;)&amp; 

CASE(TEXT(Assessment_Folder__r.Type__c),&quot;Progress Report&quot;,&quot;1&quot;,&quot;Examination&quot;,&quot;1&quot;,&quot;0&quot;)&amp; 

CASE(Assessment_Folder__r.Group__r.Group_Type__c,&quot;School Group&quot;,&quot;2&quot;,&quot;Tutor Group&quot;,&quot;1&quot;,&quot;0&quot;)&amp; 

Assessment_Folder__r.Owner_Order_Copy__c &amp; 

Case(Assessment_Folder__r.Group__r.Subject_Name__c, &quot;Personal, Social and Emotional Development&quot;,&quot;70&quot;, &quot;Communication and Language&quot;,&quot;65&quot;, &quot;Physical Development&quot;,&quot;60&quot;, &quot;English&quot;,&quot;55&quot;, &quot;Literacy&quot;,&quot;54&quot;, &quot;Reading&quot;,&quot;53&quot;, &quot;Writing&quot;,&quot;52&quot;, &quot;Mathematics&quot;,&quot;47&quot;, &quot;Mathematics - Statistics&quot;,&quot;46&quot;, &quot;Numeracy&quot;,&quot;45&quot;, &quot;Understanding the World&quot;,&quot;44&quot;, &quot;Expressive Arts &amp; Design&quot;,&quot;43&quot;, &quot;Science&quot;,&quot;42&quot;, &quot;Physics&quot;,&quot;41&quot;, &quot;Chemistry&quot;,&quot;40&quot;, &quot;Biology&quot;,&quot;39&quot;, &quot;History&quot;,&quot;38&quot;, &quot;Geography&quot;,&quot;37&quot;, &quot;Humanities&quot;,&quot;36&quot;, &quot;Integrated Curriculum&quot;,&quot;35&quot;, &quot;ICT&quot;,&quot;34&quot;, &quot;Computing&quot;,&quot;33&quot;, &quot;Computer Science&quot;,&quot;32&quot;, &quot;Business Studies&quot;,&quot;30&quot;, &quot;Media Studies&quot;,&quot;29&quot;, &quot;Economics&quot;,&quot;28&quot;, &quot;Myanmar&quot;,&quot;26&quot;, &quot;Russian&quot;,&quot;25&quot;, &quot;Chinese&quot;,&quot;24&quot;, &quot;Bahasa&quot;,&quot;23&quot;, &quot;Portuguese&quot;,&quot;22&quot;, &quot;Uzbek&quot;,&quot;21&quot;, &quot;French&quot;,&quot;20&quot;, &quot;Spanish&quot;,&quot;19&quot;, &quot;Dutch&quot;,&quot;18&quot;, &quot;German&quot;,&quot;17&quot;, &quot;Music&quot;,&quot;15&quot;, &quot;Drama&quot;,&quot;14&quot;, &quot;Dance&quot;,&quot;13&quot;, &quot;Art &amp; Design&quot;,&quot;12&quot;, &quot;Graphic Design&quot;,&quot;11&quot;, &quot;PE&quot;,&quot;10&quot;, &quot;Religious Education&quot;,&quot;09&quot;, &quot;Sociology&quot;,&quot;08&quot;, &quot;Psychology&quot;, &quot;07&quot;,&quot;Extended Project&quot;,&quot;03&quot;, &quot;EAL&quot;,&quot;02&quot;, &quot;Learning Support&quot;,&quot;01&quot;, &quot;00&quot;)&amp;

CASE(Assessment_Folder__r.Type__c,&quot;Progress Report&quot;,&quot;2&quot;,&quot;Examination&quot;,&quot;1&quot;,&quot;0&quot;)&amp;

CASE(Assessment_Folder__r.Grade_Type__c, &quot;Exam&quot;, &quot;5&quot;, &quot;Predicted Grade&quot;, &quot;4&quot;, &quot;Mock Exam&quot;, &quot;3&quot;, &quot;Target Grade&quot;, &quot;2&quot;, &quot;Current Working Grade&quot;, &quot;1&quot;, &quot;0&quot;)&amp;

LEFT(RIGHT(TEXT(Assessment_Folder__r.CreatedDate), 15), 2) &amp; 
LEFT(RIGHT(TEXT(Assessment_Folder__r.CreatedDate), 12), 2) &amp; 
LEFT(RIGHT(TEXT(Assessment_Folder__r.CreatedDate), 9), 2) &amp; 
LEFT(RIGHT(TEXT(Assessment_Folder__r.CreatedDate), 6), 2) &amp; 
LEFT(RIGHT(TEXT(Assessment_Folder__r.CreatedDate), 3), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <formula>VALUE( Order_Text__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Order_Copy__c</fullName>
        <description>Populated whenever Owner_Order__c is changed by means of a workflow</description>
        <label>Owner Order Copy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Order__c</fullName>
        <formula>IF(OR(Contains( CreatedBy.UserRole.Name ,&quot;Headteacher&quot;),Contains(CreatedBy.UserRole.Name ,&quot;Headmaster&quot; )),&quot;3&quot;,IF( OR(Contains(CreatedBy.UserRole.Name ,&quot;Head of Primary&quot;),Contains(CreatedBy.UserRole.Name ,&quot;Head of Secondary&quot; ),Contains(CreatedBy.UserRole.Name ,&quot;Head of Middle&quot; )),&quot;2&quot;,IF(AND(Contains(CreatedBy.Title ,&quot;Head of Year&quot;), TEXT(Group__r.Group_Type__c) = &quot;School Group&quot;),&quot;1&quot;,&quot;0&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Title__c</fullName>
        <description>auto populated by workflow https://ap4.salesforce.com/01Q6F0000008Meg</description>
        <label>Owner Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Portal_Visibility__c</fullName>
        <formula>IF(OR(AND(OR(TEXT(Type__c) = &quot;Test&quot;, TEXT(Type__c) = &quot;Assignment&quot;), Number_of_Assessments_in_Folder__c &lt;&gt; 0), AND(OR(TEXT(Type__c) = &quot;Progress Report&quot;, TEXT(Type__c) = &quot;Examination&quot;),  Number_of_Assessments_in_Folder__c = Number_of_Approved_Assessments_in_Folder__c, Number_of_Assessments_in_Folder__c &lt;&gt; 0, Number_of_Approved_Assessments_in_Folder__c &lt;&gt; 0)), &quot;Visible in Portal&quot;, 

IF(AND(OR(TEXT(Type__c) = &quot;Progress Report&quot;, TEXT(Type__c) = &quot;Examination&quot;),  Number_of_Assessments_in_Folder__c &lt;&gt; Number_of_Approved_Assessments_in_Folder__c, Number_of_Assessments_in_Folder__c &lt;&gt; 0, Number_of_Approved_Assessments_in_Folder__c &lt;&gt; 0), &quot;Visible to Some Parents&quot;, 

IF(Number_of_Assessments_in_Folder__c = 0, &quot;Nothing to Display&quot;,

&quot;Not Visible in Portal&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Portal Visibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Created_By_Folder_Created_By__c</fullName>
        <description>A temporary field provided so that a check can be performed with connector to ensure that the  person who created the assessment folder is the same as the person who created the assessment record</description>
        <formula>AND(RecordType.Name = &quot;Assessment Record&quot;, CreatedBy.Id &lt;&gt; Assessment_Folder__r.CreatedBy.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Created By &lt;&gt; Folder Created By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>Text( Group__r.Owner:User.School__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Predicted_Grade__c</fullName>
        <label>Target/Predicted Grade</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_or_Predicted_Grade__c</fullName>
        <description>Required to filter assessment records in reports based on Target or Predicted as selected in the related assessment folder</description>
        <formula>TEXT(Assessment_Folder__r.Include_Target_Predicted_Grade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target or Predicted Grade?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Copy__c</fullName>
        <description>Populated by means of a workflow whenever Term__c is changed</description>
        <label>Term Copy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Dashboard_Filter__c</fullName>
        <formula>Academic_Year__c &amp;&quot; &quot;&amp; Assessment_Folder__r.Term_Copy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Dashboard Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Manual_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To manually override the value of the Term__c field on the assessment record. In case of manual override the value from the Manual_Term__c field should be used.</description>
        <label>Term Manual Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <formula>IF(
   Term_Manual_Override__c = TRUE,
   TEXT(Manual_Term__c),
   IF(
      RecordType.Name = &quot;Assessment Folder&quot;, 
      IF(
         AND(
             MONTH(Assessment_Date__c)&gt;7,
             MONTH(Assessment_Date__c)&lt;13
             ),
         &quot;Term 1&quot;,
         IF(
            AND(
                MONTH(Assessment_Date__c)&gt;=1,
                (OR(
                    MONTH(Assessment_Date__c)&lt;4,
                    (AND(
                         MONTH(Assessment_Date__c)=4,
                         DAY(Assessment_Date__c)&lt;11
                         )
                     )
                     )
                 )
             ),
          &quot;Term 2&quot;,
          &quot;Term 3&quot;)
       ),  
    Assessment_Folder__r.Term_Copy__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Parent Portal Visibility
1) Progress Reports &amp; Examinations: Require Headteacher Approval
2) Tests &amp; Assignments: Visible in Portal on Save
3) Tracking: Never Visible in Portal</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Progress Report</fullName>
                </value>
                <value>
                    <fullName>Examination</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Tracking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Group_Dashboard_Filter__c</fullName>
        <formula>CASE(Year_Group_Grade__c, 
&quot;PN1&quot;, &quot;Pre-Nursery, Early Years, Pre-School, Primary&quot;, 
&quot;PN&quot;, &quot;Pre-Nursery, Early Years, Pre-School, Primary&quot;, 
&quot;N&quot;, &quot;Nursery, Early Years, Pre-School, Primary&quot;, 
&quot;R&quot;, &quot;Reception, Early Years, Primary&quot;, 
&quot;Y1&quot;, &quot;Year 1, Key Stage 1, Primary&quot;, 
&quot;Y2&quot;, &quot;Year 2, Key Stage 1, Primary&quot;, 
&quot;Y3&quot;, &quot;Year 3, Key Stage 2, Primary&quot;, 
&quot;Y4&quot;, &quot;Year 4, Key Stage 2, Primary&quot;, 
&quot;Y5&quot;, &quot;Year 5, Key Stage 2, Primary&quot;, 
&quot;Y6&quot;, &quot;Year 6, Key Stage 2, Primary&quot;, 
&quot;Y7&quot;, &quot;Year 7, Key Stage 3, Secondary&quot;, 
&quot;Y8&quot;, &quot;Year 8, Key Stage 3, Secondary&quot;, 
&quot;Y9&quot;, &quot;Year 9, Key Stage 3, Secondary&quot;, 
&quot;Y10&quot;, &quot;Year 10, Key Stage 4, Secondary&quot;, 
&quot;Y11&quot;, &quot;Year 11, Key Stage 4, Secondary&quot;, 
&quot;Y12&quot;, &quot;Year 12, Key Stage 5, Secondary&quot;, 
&quot;Y13&quot;, &quot;Year 13, Key Stage 5, Secondary&quot;, 
&quot;PK&quot;, &quot;Pre-Kindergarten, Pre-School&quot;,
&quot;K&quot;, &quot;Kindergarten, Elementary&quot;,
&quot;G1&quot;, &quot;Grade 1, Elementary&quot;,
&quot;G2&quot;, &quot;Grade 2, Elementary&quot;,
&quot;G3&quot;, &quot;Grade 3, Elementary&quot;,
&quot;G4&quot;, &quot;Grade 4, Elementary&quot;,
&quot;G5&quot;, &quot;Grade 5, Elementary&quot;,
&quot;G6&quot;, &quot;Grade 6, Middle School&quot;,
&quot;G7&quot;, &quot;Grade 7, Middle School&quot;,
&quot;G8&quot;, &quot;Grade 8, Middle School&quot;,
&quot;G9&quot;, &quot;Grade 9, High School&quot;,
&quot;G10&quot;, &quot;Grade 10, High School&quot;,
&quot;G11&quot;, &quot;Grade 11, High School&quot;,
&quot;G12&quot;, &quot;Grade 12, High School&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Group Dashboard Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Group_Grade__c</fullName>
        <description>Records the year group / grade of the student at the time the assessment is created</description>
        <label>Year Group / Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Assessment</label>
    <listViews>
        <fullName>Assessment_Folders</fullName>
        <columns>NAME</columns>
        <columns>Assessment_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Grade__c</columns>
        <columns>Effort__c</columns>
        <columns>Achievement__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Assesment__c.Assessment_Folder</value>
        </filters>
        <label>Assessment Folders</label>
    </listViews>
    <listViews>
        <fullName>Assessment_Records</fullName>
        <columns>NAME</columns>
        <columns>Assessment_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Grade__c</columns>
        <columns>Effort__c</columns>
        <columns>Achievement__c</columns>
        <columns>Comment__c</columns>
        <columns>School__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Assesment__c.Assessment_Record</value>
        </filters>
        <label>Assessment Records</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <recordTypes>
        <fullName>Assessment_Folder</fullName>
        <active>true</active>
        <label>Assessment Folder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assessment_Record</fullName>
        <active>true</active>
        <label>Assessment Record</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assesment_Record_and_Student</fullName>
        <active>true</active>
        <description>Ensuring an Assesment record always has a student attached</description>
        <errorConditionFormula>/*This contained an invalid RecordTypeId value in BSF SFDC and has only just been corrected. If any problems occur than it may be down to this increased validation */

AND(RecordTypeId  =&quot;0126F000001hVzJ&quot;, Student__c =&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Student__c</errorDisplayField>
        <errorMessage>An Assessment record must be linked to a student.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_Spacers</fullName>
        <active>true</active>
        <description>Prevents the spacers being used as an effort grade</description>
        <errorConditionFormula>OR(
   TEXT(Achievement__c) = &quot;------PRIMARY------&quot;,
   TEXT(Achievement__c) = &quot;----EYFS/PRIMARY----&quot;,
   TEXT(Effort__c) = &quot;------PRIMARY------&quot;,
   TEXT(Effort__c) = &quot;----EYFS/PRIMARY----&quot;,
   TEXT(Effort__c) = &quot;------SECONDARY------&quot;,
   TEXT(Effort__c) = &quot;--------------&quot;
   )</errorConditionFormula>
        <errorMessage>You cannot use a spacer in the &apos;Effort&apos; or &apos;Achievement&apos; field. Please select a valid option.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grade_Length</fullName>
        <active>true</active>
        <description>The rule allows 4 characters length only in case the grade is &apos;100%&apos; or &apos;A*A*&apos;</description>
        <errorConditionFormula>AND(LEN(Grade__c) = 4, Grade__c != &quot;100%&quot;, Grade__c != &quot;A*A*&quot;)</errorConditionFormula>
        <errorDisplayField>Grade__c</errorDisplayField>
        <errorMessage>Grade may be 4 characters long only if it is &apos;100%&apos; or &apos;A*A*&apos;.
If you need another 4 character grade to be added then please contact your system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ISM_KS3_Validate_Effort_Options</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(
       ISNEW(),
       AND(
           School__c = &quot;The International School of Moscow&quot;,
           OR(
              Contact_Year_Group__c = &quot;Y7&quot;,
              Contact_Year_Group__c = &quot;Y8&quot;,
              Contact_Year_Group__c = &quot;Y9&quot;
              )
          ),
       OR(
          TEXT(Effort__c) = &quot;1&quot;,
          TEXT(Effort__c) = &quot;2&quot;,
          TEXT(Effort__c) = &quot;3&quot;,
          TEXT(Effort__c) = &quot;4&quot;
          )
       ),
   AND(
       AND(
           School__c != &quot;The International School of Moscow&quot;,
           OR(
              Contact_Year_Group__c = &quot;Y7&quot;,
              Contact_Year_Group__c = &quot;Y8&quot;,
              Contact_Year_Group__c = &quot;Y9&quot;
              )
          ),
       OR(
          TEXT(Effort__c) = &quot;A&quot;,
          TEXT(Effort__c) = &quot;B&quot;,
          TEXT(Effort__c) = &quot;C&quot;,
          TEXT(Effort__c) = &quot;D&quot;
          )
       ),
   AND(
       AND(
           School__c = &quot;The International School of Moscow&quot;,
           OR(
              Contact_Year_Group__c = &quot;Y7&quot;,
              Contact_Year_Group__c = &quot;Y8&quot;,
              Contact_Year_Group__c = &quot;Y9&quot;
              )
          ),
       OR(
          TEXT(Effort__c) = &quot;1&quot;,
          TEXT(Effort__c) = &quot;2&quot;,
          TEXT(Effort__c) = &quot;3&quot;,
          TEXT(Effort__c) = &quot;4&quot;
          )
       ),
   AND(
       ISNEW(),
       AND(
           School__c != &quot;The International School of Moscow&quot;,
           OR(
              Contact_Year_Group__c = &quot;Y7&quot;,
              Contact_Year_Group__c = &quot;Y8&quot;,
              Contact_Year_Group__c = &quot;Y9&quot;
              )
          ),
       OR(
          TEXT(Effort__c) = &quot;A&quot;,
          TEXT(Effort__c) = &quot;B&quot;,
          TEXT(Effort__c) = &quot;C&quot;,
          TEXT(Effort__c) = &quot;D&quot;
          )
       )
   )</errorConditionFormula>
        <errorMessage>The effort option that you have selected is not valid for a student in this year group. Please select another.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Target_Predicted_Grade_Length</fullName>
        <active>true</active>
        <description>The rule allows 4 characters length only in case the grade is &apos;100%&apos; or &apos;A*A*&apos;</description>
        <errorConditionFormula>AND(LEN(Target_Predicted_Grade__c) = 4, Target_Predicted_Grade__c != &quot;100%&quot;, Target_Predicted_Grade__c != &quot;A*A*&quot;)</errorConditionFormula>
        <errorDisplayField>Target_Predicted_Grade__c</errorDisplayField>
        <errorMessage>Grade may be 4 characters long only if it is &apos;100%&apos; or &apos;A*A*&apos;. 
If you need another 4 character grade to be added then please contact your system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Achievement_Options</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(
       ISNEW(),
       OR( 
          AND(
              OR(
                 School__c = &quot;The British School of Nanjing&quot;,
                 School__c = &quot;The King&apos;s School Manila&quot;
                 ),    
              Contact_Year_Group__c = &quot;Y6&quot;
              ),
          Contact_Year_Group__c = &quot;Y7&quot;,
          Contact_Year_Group__c = &quot;Y8&quot;,
          Contact_Year_Group__c = &quot;Y9&quot;,
          Contact_Year_Group__c = &quot;Y10&quot;,
          Contact_Year_Group__c = &quot;Y11&quot;,
          Contact_Year_Group__c = &quot;Y12&quot;,
          Contact_Year_Group__c = &quot;Y13&quot;
          ),
       CONTAINS(TEXT(Achievement__c), &quot;★&quot;)
       ),
   AND(
       OR( 
          AND(
              OR(
                 School__c = &quot;The British School of Nanjing&quot;,
                 School__c = &quot;The King&apos;s School Manila&quot;
                 ),    
              Year_Group_Grade__c = &quot;Y6&quot;
              ),
          Year_Group_Grade__c = &quot;Y7&quot;,
          Year_Group_Grade__c = &quot;Y8&quot;,
          Year_Group_Grade__c = &quot;Y9&quot;,
          Year_Group_Grade__c = &quot;Y10&quot;,
          Year_Group_Grade__c = &quot;Y11&quot;,
          Year_Group_Grade__c = &quot;Y12&quot;,
          Year_Group_Grade__c = &quot;Y13&quot;
          ),
       CONTAINS(TEXT(Achievement__c), &quot;★&quot;)
       )
   )</errorConditionFormula>
        <errorMessage>You cannot select ★★★★, ★★★, ★★ or ★ for the achievement of a student in this year group. Please leave the achievement field blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Effort_Options</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(
       ISNEW(),
       OR( 
          AND(
              OR(
                 School__c = &quot;The British School of Nanjing&quot;,
                 School__c = &quot;The King&apos;s School Manila&quot;
                 ),    
              Contact_Year_Group__c = &quot;Y6&quot;
              ),
          Contact_Year_Group__c = &quot;Y7&quot;,
          Contact_Year_Group__c = &quot;Y8&quot;,
          Contact_Year_Group__c = &quot;Y9&quot;,
          Contact_Year_Group__c = &quot;Y10&quot;,
          Contact_Year_Group__c = &quot;Y11&quot;,
          Contact_Year_Group__c = &quot;Y12&quot;,
          Contact_Year_Group__c = &quot;Y13&quot;
          ),
       CONTAINS(TEXT(Effort__c), &quot;★&quot;)
       ),
   AND(
       ISNEW(),
       OR( 
          AND(
              School__c != &quot;The British School of Nanjing&quot;,
              School__c != &quot;The King&apos;s School Manila&quot;,
              Contact_Year_Group__c = &quot;Y6&quot;
              ),
          Contact_Year_Group__c = &quot;PN1&quot;,
          Contact_Year_Group__c = &quot;PN&quot;,
          Contact_Year_Group__c = &quot;N&quot;,
          Contact_Year_Group__c = &quot;R&quot;,
          Contact_Year_Group__c = &quot;Y1&quot;,
          Contact_Year_Group__c = &quot;Y2&quot;,
          Contact_Year_Group__c = &quot;Y3&quot;,
          Contact_Year_Group__c = &quot;Y4&quot;,
          Contact_Year_Group__c = &quot;Y5&quot;
          ),
       OR(
          TEXT(Effort__c) = &quot;1&quot;,
          TEXT(Effort__c) = &quot;2&quot;,
          TEXT(Effort__c) = &quot;3&quot;,
          TEXT(Effort__c) = &quot;4&quot;,
          TEXT(Effort__c) = &quot;A&quot;,
          TEXT(Effort__c) = &quot;B&quot;,
          TEXT(Effort__c) = &quot;C&quot;,
          TEXT(Effort__c) = &quot;D&quot;
          )
       ),
   AND(
       OR( 
          AND(
              OR(
                 School__c = &quot;The British School of Nanjing&quot;,
                 School__c = &quot;The King&apos;s School Manila&quot;
                 ),    
              Year_Group_Grade__c = &quot;Y6&quot;
              ),
          Year_Group_Grade__c = &quot;Y7&quot;,
          Year_Group_Grade__c = &quot;Y8&quot;,
          Year_Group_Grade__c = &quot;Y9&quot;,
          Year_Group_Grade__c = &quot;Y10&quot;,
          Year_Group_Grade__c = &quot;Y11&quot;,
          Year_Group_Grade__c = &quot;Y12&quot;,
          Year_Group_Grade__c = &quot;Y13&quot;
          ),
       CONTAINS(TEXT(Effort__c), &quot;★&quot;)
       ),
   AND(
       OR( 
          AND(
              School__c != &quot;The British School of Nanjing&quot;,
              School__c != &quot;The King&apos;s School Manila&quot;,
              Year_Group_Grade__c = &quot;Y6&quot;
              ),
          Year_Group_Grade__c = &quot;PN1&quot;,
          Year_Group_Grade__c = &quot;PN&quot;,
          Year_Group_Grade__c = &quot;N&quot;,
          Year_Group_Grade__c = &quot;R&quot;,
          Year_Group_Grade__c = &quot;Y1&quot;,
          Year_Group_Grade__c = &quot;Y2&quot;,
          Year_Group_Grade__c = &quot;Y3&quot;,
          Year_Group_Grade__c = &quot;Y4&quot;,
          Year_Group_Grade__c = &quot;Y5&quot;
          ),
       OR(
          TEXT(Effort__c) = &quot;1&quot;,
          TEXT(Effort__c) = &quot;2&quot;,
          TEXT(Effort__c) = &quot;3&quot;,
          TEXT(Effort__c) = &quot;4&quot;,
          TEXT(Effort__c) = &quot;A&quot;,
          TEXT(Effort__c) = &quot;B&quot;,
          TEXT(Effort__c) = &quot;C&quot;,
          TEXT(Effort__c) = &quot;D&quot;
          )
       )
   )</errorConditionFormula>
        <errorMessage>The effort option that you have selected is not valid for a student in this year group. Please select another.</errorMessage>
    </validationRules>
</CustomObject>